add GET apis for selection and completion
